t_server/tofu/openvpn_test_env/openvpn_rocky_9.tf
resource "aws_eip" "openvpn_rocky_9" {
  instance = module.openvpn_instance["openvpn_rocky_9"].id[0]
  domain   = "vpc"
}

resource "aws_route53_record" "openvpn_rocky_9-a" {
  count   = var.enable_public_dns_zone ? 1 : 0
  zone_id = aws_route53_zone.public_dns_zone[0].zone_id
  name    = local.openvpn_rocky_9_fqdn
  type    = "A"
  ttl     = 300
  records = [aws_eip.openvpn_rocky_9.public_ip]
}

resource "aws_route53_record" "openvpn_rocky_9-aaaa" {
  count   = var.enable_public_dns_zone ? 1 : 0
  zone_id = aws_route53_zone.public_dns_zone[0].zone_id
  name    = local.openvpn_rocky_9_fqdn
  type    = "AAAA"
  ttl     = 300
  records = [module.openvpn_instance["openvpn_rocky_9"].ipv6_addresses[0][0]]
}

# OpenVPN return traffic in main VPC through the OpenVPN server
resource "aws_route" "openvpn_rocky_9_return_traffic" {
  route_table_id         = module.primary-vpc.public_route_table_id
  destination_cidr_block = var.vpn_cidr_block
  network_interface_id   = module.openvpn_instance["openvpn_rocky_9"].primary_network_interface_id[0]
}

resource "aws_route" "openvpn_rocky_9_return_traffic_private" {
  route_table_id         = module.primary-vpc.private_route_table_id
  destination_cidr_block = var.vpn_cidr_block
  network_interface_id   = module.openvpn_instance["openvpn_rocky_9"].primary_network_interface_id[0]
}

# OpenVPN return traffic in office VPC through the (iroute) OpenVPN client
resource "aws_route" "openvpn_client_return_traffic" {
  route_table_id         = module.secondary-vpc.public_route_table_id
  destination_cidr_block = var.vpn_cidr_block
  network_interface_id   = module.openvpn_instance["openvpn_client"].primary_network_interface_id[0]
}

resource "aws_route" "openvpn_client_return_traffic_private" {
  route_table_id         = module.secondary-vpc.private_route_table_id
  destination_cidr_block = var.vpn_cidr_block
  network_interface_id   = module.openvpn_instance["openvpn_client"].primary_network_interface_id[0]
}
